packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_simple_signal.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 107
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export const TestButton = component$(() => {
  	const sig = useSignal(0);

  	return <button onClick$={() => sig.value++}>{sig.value}</button>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_uFrpfTnm3bA = ()=>import("./test.tsx_TestButton_component_uFrpfTnm3bA");
export const TestButton = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_uFrpfTnm3bA, "TestButton_component_uFrpfTnm3bA"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,OAAO,MAAM,2BAAa,mFAIvB\"}")
============================= test.tsx_TestButton_component_button_on_click_mqKQGCHG0ZI.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const TestButton_component_button_on_click_mqKQGCHG0ZI = ()=>{
    const [sig] = useLexicalScope();
    return sig.value++;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gEAM4B;;WAAM,IAAI,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_button_on_click_mqKQGCHG0ZI",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_button_on_click",
  "hash": "mqKQGCHG0ZI",
  "canonicalFilename": "test.tsx_TestButton_component_button_on_click_mqKQGCHG0ZI",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    162,
    179
  ],
  "captureNames": [
    "sig"
  ]
}
*/
============================= test.tsx_TestButton_component_uFrpfTnm3bA.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_mqKQGCHG0ZI = ()=>import("./test.tsx_TestButton_component_button_on_click_mqKQGCHG0ZI");
export const TestButton_component_uFrpfTnm3bA = ()=>{
    const sig = useSignal(0);
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "on:click": /*#__PURE__*/ qrl(i_mqKQGCHG0ZI, "TestButton_component_button_on_click_mqKQGCHG0ZI", [
            sig
        ])
    }, _wrapProp(sig), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;gDAGqC;IAClC,MAAM,MAAM,UAAU;IAEtB,qBAAO,WAAC;QAAO,UAAQ;;;iBAAsB;AAChD\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_uFrpfTnm3bA",
  "entry": null,
  "displayName": "test.tsx_TestButton_component",
  "hash": "uFrpfTnm3bA",
  "canonicalFilename": "test.tsx_TestButton_component_uFrpfTnm3bA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    96,
    204
  ]
}
*/
== DIAGNOSTICS ==

[]
