packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_skip_transform.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1371
expression: output
---
==INPUT==


import { component$ as Component, $ as onRender } from '@qwik.dev/core';

export const handler = $(()=>console.log('hola'));

export const App = component$((props) => {
	useStyles$('hola');
	return $(() => (
		<div>{state.thing}</div>
	));
});

============================= test.js ==

import { _jsxSorted } from "@qwik.dev/core";
//
export const handler = $(()=>console.log('hola'));
export const App = component$((props)=>{
    useStyles$('hola');
    return $(()=>/*#__PURE__*/ _jsxSorted("div", null, null, state.thing, 1, "u6_0"));
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,UAAU,EAAE,IAAI,QAAQ,GAAG,CAAC,SAAS;AAElD,OAAO,MAAM,MAAM,WAAW,CAAC;IAC9B,WAAW;IACX,OAAO,EAAE,kBACR,WAAC,mBAAK,MAAM,KAAK;AAEnB,GAAG\"}")
== DIAGNOSTICS ==

[]
