packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_transpile_ts_only.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2627
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
//
const App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = ()=>console.log('warn');
const App_component_ckEPmXZlub0 = (props)=>{
    return <Cmp>
			<p class="stuff" q-e:click={/*#__PURE__*/ inlinedQrl(App_component_Cmp_p_q_e_click_Yl4ybrJWrt4, "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4")}>Hello Qwik</p>
		</Cmp>;
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;kDAM8B,IAAM,QAAQ,GAAG,CAAC;kCAHlB,CAAC;IAC9B,QACE,IAAI;GACJ,CAAC,EAAE,MAAM,QAAQ,6HAAqC,UAAU,EAAE,EAAE;EACrE,EAAE;AAEJ;AANA,OAAO,MAAM,oBAAM,+FAMhB\"}")
== DIAGNOSTICS ==

[]
